--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         <activity
             android:name=".HomepageActivity"
             android:exported="false" />
+        <activity android:name=".ScanHomeActivity"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
