edit error on activity_mainscanproduct.xml and activity_scanproduct.xml , add ScanProductActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,14 @@
         <activity
             android:name=".HomepageActivity"
             android:exported="false" />
-        <activity android:name=".ScanHomeActivity"/>
+
+
+        <activity android:name=".MainScanProductActivity"/>
+
+
+        <activity android:name=".ScanProductActivity"/>
+
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
