edit homepage and activity_mainscanproduct.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,11 @@
             android:name=".HomepageActivity"
             android:exported="false" />
 
+        <activity android:name=".MainScanProductActivity"
+            android:exported="false" />
 
-        <activity android:name=".MainScanProductActivity"/>
-
-
-        <activity android:name=".ScanProductActivity"/>
-
+        <activity android:name=".ScanProductActivity"
+            android:exported="false" />
 
         <activity
             android:name=".MainActivity"
