change launcher on android manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:exported="false" />
 
 
-        <!--<activity android:name=".MainScanProductActivity"/>  -->
+        <activity android:name=".MainScanProductActivity"/>
 
 
 
@@ -24,7 +24,7 @@
 
 
         <activity
-            android:name=".MainScanProductActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
