categories xml. chocclats xml and java

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,11 @@
             android:name=".MainScanProductActivity"
             android:exported="false" />
 
+
+        <activity
+            android:name=".MainCategoriesPage"
+            android:exported="false" />
+
         <activity
             android:name=".HomepageActivity"
             android:exported="false" />
