create activity_search_product.xml and SearchProductActivity.java

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,33 +8,30 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BarcodeScannerApp">
-
+        <activity
+            android:name=".SearchProductActivity"
+            android:exported="false" />
         <activity
             android:name=".ScanProductCamera"
             android:exported="false" />
-
         <activity
             android:name=".MainScanProductActivity"
             android:exported="false" />
-
-
         <activity
             android:name=".MainCategoriesPage"
             android:exported="false" />
-
         <activity
             android:name=".HomepageActivity"
             android:exported="false" />
-
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
