--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BarcodeScannerApp">
         <activity
+            android:name=".BeveragesActivity"
+            android:exported="false" />
+        <activity
             android:name=".SnickersActivity"
             android:exported="false" />
         <activity
@@ -43,6 +46,12 @@
             android:exported="false" />
         <activity
             android:name=".ChoclatesActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SearchProductActivity"
+            android:exported="false" />
+        <activity
+            android:name=".BookmarkActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
