edit on ScanProductActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,9 @@
             android:name=".ScanProductCamera"
             android:exported="false" />
         <activity
+            android:name=".ScanProductActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainScanProductActivity"
             android:exported="false" />
         <activity
