--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -97,8 +97,14 @@
             android:exported="false" />
 
         <activity
+            android:name=".InsertBarcodeActivity"
+            android:exported="false"/>
+
+        <activity
             android:name=".MainActivity"
             android:exported="true">
+
+
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
